Bug 1413500 - Use GLSL 100 for blitting on ES r=jgilbert a=eager-gchang

MozReview-Commit-ID: KlSRfeP7PVi